--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
-    "react-flip-move": "^3.0.4",
+    "react-flip-toolkit": "^7.0.12",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1"
